fix: fix description

--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
                       I graduated from Seoul National University in Seoul with
                       B.S. in materials science in engineering in class 2022.
                     </p>
+                    <p>
+                      From 2019 to present, I was fortunate to get an
+                      opportunity to work under the guidance of
+                      <a
+                        href="https://sites.google.com/view/snu-neuromorphic/members"
+                        >Prof. Sangbum Kim</a
+                      >
+                      (<a href="https://mse.snu.ac.kr/m11.php"
+                        >Seoul National University</a
+                      >) as a research intern for spiking neural network
+                      simulation software development.
+                    </p>
                     <p>At .</p>
                     <p style="text-align: center">
                       <a href="mailto:gabrielyoon@snu.ac.kr">Email</a>
