--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                       <a href="https://github.com/Gabriel-Yoon/">Github</a>
                     </p>
                   </td>
-                  <td style="padding: 2.5%; width: 40%; max-width: 40%">
+                  <td style="padding: 2.5%; width: 30%; max-width: 40%">
                     <a href="images/Seongwon_Yoon_head.jpg"
                       ><img
                         style="
@@ -83,7 +83,7 @@
                           border-radius: 50%;
                         "
                         alt="profile photo"
-                        src="images/Seongwon_Yoon_head.jpg"
+                        src="images/photoOfMe.jpeg"
                         class="hoverZoomLink"
                     /></a>
                   </td>
