fix: Add research topics

--- a/index.html
+++ b/index.html
@@ -60,6 +60,25 @@
                       >) as a research intern for spiking neural network
                       simulation software development.
                     </p>
+                    <p>
+                      From the summer of 2023, I am being a student researcher
+                      under the guidance of
+                      <a href="https://sites.google.com/site/kubasiclab/people"
+                        >Prof. Hyung-min Lee</a
+                      >
+                      (<a
+                        href="https://pure.korea.ac.kr/en/persons/hyung-min-lee"
+                        >Korea University</a
+                      >) and
+                      <a
+                        href="https://sites.google.com/view/snu-neuromorphic/members"
+                        >Prof. Sangbum Kim</a
+                      >
+                      (<a href="https://mse.snu.ac.kr/m11.php"
+                        >Seoul National University</a
+                      >) for on-chip training of IGZO TFT capacitor-based
+                      synapse array.
+                    </p>
                     <p>At .</p>
                     <p style="text-align: center">
                       <a href="mailto:gabrielyoon@snu.ac.kr">Email</a>
