--- a/index.html
+++ b/index.html
@@ -45,24 +45,31 @@
                   <td style="padding: 2.5%; width: 63%; vertical-align: middle">
                     <p class="name" style="text-align: center">Seongwon Yoon</p>
                     <p>
-                      I graduated from Seoul National University in Seoul with
-                      B.S. in materials science in engineering in class 2022.
+                      I completed my degree from Seoul National University with
+                      B.S. in materials science in engineering.
                     </p>
                     <p>
-                      From 2019 to present, I was fortunate to get an
-                      opportunity to work under the guidance of
+                      From 2019 to present, I am fortunate to get an opportunity
+                      to work under the guidance of
+                      <a href="https://research.ibm.com/people/masatoshi-ishii"
+                        >Mr. Masatoshi Ishii</a
+                      >
+                      (<a href="https://research.ibm.com/labs/tokyo/"
+                        >IBM Research-Tokyo</a
+                      >) and
                       <a
                         href="https://sites.google.com/view/snu-neuromorphic/members"
                         >Prof. Sangbum Kim</a
                       >
                       (<a href="https://mse.snu.ac.kr/m11.php"
                         >Seoul National University</a
-                      >) as a research intern for spiking neural network
-                      simulation software development.
+                      >) as a student researcher for spiking neural network
+                      simulation software development to solve combinatorial
+                      optimization problems.
                     </p>
                     <p>
-                      From the summer of 2023, I am being a student researcher
-                      under the guidance of
+                      From the summer of 2023, I am working under the guidance
+                      of
                       <a href="https://sites.google.com/site/kubasiclab/people"
                         >Prof. Hyung-min Lee</a
                       >
@@ -79,7 +86,13 @@
                       >) for on-chip training of IGZO TFT capacitor-based
                       synapse array.
                     </p>
-                    <p>At .</p>
+                    <p>
+                      I worked as a software engineer in
+                      <a href="https://dentbird.com/"
+                        >Imagoworks Inc. in the compilation of quality data and
+                        fine-tuning of generative models.</a
+                      >
+                    </p>
                     <p style="text-align: center">
                       <a href="mailto:gabrielyoon@snu.ac.kr">Email</a>
                       &nbsp;/&nbsp;
