--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                     <p style="text-align: right; font-size: small">
                       Design and source code from
                       <a href="https://github.com/jonbarron/jonbarron_website"
-                        >source code</a
+                        >Jon Barron Website</a
                       >.
                     </p>
                   </td>
