--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                       From the summer of 2023, I am working under the guidance
                       of
                       <a href="https://sites.google.com/site/kubasiclab/people"
-                        >Prof. Hyung-min Lee</a
+                        >Prof. Hyung-Min Lee</a
                       >
                       (<a
                         href="https://pure.korea.ac.kr/en/persons/hyung-min-lee"
@@ -88,10 +88,9 @@
                     </p>
                     <p>
                       I worked as a software engineer in
-                      <a href="https://dentbird.com/"
-                        >Imagoworks Inc. in the compilation of quality data and
-                        fine-tuning of generative models.</a
-                      >
+                      <a href="https://dentbird.com/">Imagoworks Inc.</a>
+                      in the compilation of quality data and fine-tuning of
+                      generative models.
                     </p>
                     <p style="text-align: center">
                       <a href="mailto:gabrielyoon@snu.ac.kr">Email</a>
@@ -157,61 +156,36 @@
               "
             >
               <tbody>
-                <tr onmouseout="camp_stop()" onmouseover="camp_start()">
+                <tr onmouseout="nlt_stop()" onmouseover="nlt_start()">
                   <td style="padding: 20px; width: 25%; vertical-align: middle">
-                    <div class="one">
-                      <div class="two" id="camp_image">
-                        <video width="100%" height="100%" muted autoplay loop>
-                          <source src="images/camp.mp4" type="video/mp4" />
-                          Your browser does not support the video tag.
-                        </video>
-                      </div>
-                      <img src="images/camp.png" width="160" />
-                    </div>
-                    <script type="text/javascript">
-                      function camp_start() {
-                        document.getElementById("camp_image").style.opacity =
-                          "1";
-                      }
-
-                      function camp_stop() {
-                        document.getElementById("camp_image").style.opacity =
-                          "0";
-                      }
-                      camp_stop();
-                    </script>
+                    <img src="images/2022_AnyDA.png" width="160" height="100" />
                   </td>
-                  <td style="padding: 20px; width: 75%; vertical-align: middle">
-                    <a href="https://camp-nerf.github.io/">
-                      <span class="papertitle"
-                        >CamP: Camera Preconditioning for Neural Radiance
-                        Fields</span
+                  <td width="75%" valign="middle">
+                    <a href="data/AnyDA_2022.pdf">
+                      <papertitle
+                        >Clinical validity and precision of deep learning-based
+                        Cone-Beam Computed Tomography automatic landmarking
+                        algorithm</papertitle
                       >
                     </a>
                     <br />
-                    <a href="https://keunhong.com/">Keunhong Park</a>,
-                    <a href="https://henzler.github.io/">Philipp Henzler</a>,
-                    <a href="https://bmild.github.io/">Ben Mildenhall</a>,
-                    <strong>Jonathan T. Barron</strong>,
-                    <a href="http://www.ricardomartinbrualla.com/"
-                      >Ricardo Martin-Brualla</a
-                    >
-                    <br />
-                    <em>SIGGRAPH Asia</em>, 2023
-                    <br />
-                    <a href="https://camp-nerf.github.io/">project page</a>
-                    /
-                    <a href="https://arxiv.org/abs/2308.10902">arXiv</a>
-                    <p></p>
+                    Jungeun Park, <strong>Seongwon Yoon</strong>, Hannah Kim,
+                    Youngjun Kim, Woncheul Choi, Youngjun Choi, Hyungseog Yu,
+                    Uilyong Lee<br />
+                    <em>Submitted (<strong>ICLR</strong>)</em>, 2023.<br />
+
                     <p>
-                      Preconditioning based on camera parameterization helps
-                      NeRF and camera extrinsics/intrinsics optimize better
-                      together.
+                      We introduce a novel approach for anytime domain
+                      adaptation by considering domain alignment with switchable
+                      depth, width and input resolutions to achieve
+                      accuracy-efficiency trade-offs in the target domain for
+                      different resource constraints.
                     </p>
                   </td>
                 </tr>
               </tbody>
             </table>
+
             <table
               style="
                 width: 100%;
