--- a/index.html
+++ b/index.html
@@ -161,25 +161,29 @@
                     <img src="images/2022_AnyDA.png" width="160" height="100" />
                   </td>
                   <td width="75%" valign="middle">
+                    Clinical validity and precision of deep learning-based
+                    Cone-Beam Computed Tomography automatic landmarking
+                    algorithm
                     <a href="data/AnyDA_2022.pdf">
-                      <papertitle
-                        >Clinical validity and precision of deep learning-based
-                        Cone-Beam Computed Tomography automatic landmarking
-                        algorithm</papertitle
-                      >
+                      <papertitle></papertitle>
                     </a>
                     <br />
                     Jungeun Park, <strong>Seongwon Yoon</strong>, Hannah Kim,
                     Youngjun Kim, Woncheul Choi, Youngjun Choi, Hyungseog Yu,
                     Uilyong Lee<br />
-                    <em>Submitted (<strong>ICLR</strong>)</em>, 2023.<br />
+                    <em>Submitted (<strong></strong>)</em>, 2023.<br />
 
                     <p>
-                      We introduce a novel approach for anytime domain
-                      adaptation by considering domain alignment with switchable
-                      depth, width and input resolutions to achieve
-                      accuracy-efficiency trade-offs in the target domain for
-                      different resource constraints.
+                      Aimed to evaluate the clinical validity and accuracy of a
+                      deep learning-based cone-beam computed tomography (CBCT)
+                      automatic landmarking algorithm by comparing three
+                      dimensional CBCT head measurement values obtained by
+                      manual and automatic landmarking. This study is based on
+                      the product
+                      <a
+                        href="https://dentbird.com/business/solutions/ct-landmark-detection/"
+                        >CT Landmark Detection</a
+                      >
                     </p>
                   </td>
                 </tr>
