--- a/index.html
+++ b/index.html
@@ -158,7 +158,11 @@
               <tbody>
                 <tr onmouseout="nlt_stop()" onmouseover="nlt_start()">
                   <td style="padding: 20px; width: 25%; vertical-align: middle">
-                    <img src="images/2022_AnyDA.png" width="160" height="100" />
+                    <img
+                      src="images/clinicValidity.png"
+                      width="160"
+                      height="100"
+                    />
                   </td>
                   <td width="75%" valign="middle">
                     Clinical validity and precision of deep learning-based
