fix: Add pub ref

--- a/index.html
+++ b/index.html
@@ -172,9 +172,23 @@
                       <papertitle></papertitle>
                     </a>
                     <br />
-                    Jungeun Park, <strong>Seongwon Yoon</strong>, Hannah Kim,
-                    Youngjun Kim, Woncheul Choi, Youngjun Choi, Hyungseog Yu,
-                    Uilyong Lee<br />
+                    Jungeun Park, <strong>Seongwon Yoon</strong>,
+                    <a
+                      href="https://scholar.google.com/citations?hl=ko&user=wpEcO9cAAAAJ"
+                      >Hannah Kim</a
+                    >,
+                    <a
+                      href="https://scholar.google.com/citations?user=-jahd7AAAAAJ&hl=ko&oi=ao"
+                      >Youngjun Kim</a
+                    >, Woncheul Choi,
+                    <a
+                      href="https://scholar.google.com/citations?hl=ko&user=6TCxU5QAAAAJ"
+                      >Young Jun Choi</a
+                    >, Hyungseog Yu,
+                    <a
+                      href="https://scholar.google.com/citations?hl=ko&user=6zHzzuMAAAAJ"
+                      >Uilyong Lee</a
+                    ><br />
                     <em>Submitted (<strong></strong>)</em>, 2023.<br />
 
                     <p>
