feat: Add KCS conf

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
                       B.S. in materials science in engineering.
                     </p>
                     <p>
+                      I worked as a software engineer in
+                      <a href="https://dentbird.com/">Imagoworks Inc.</a>
+                      in the compilation of quality data and fine-tuning of
+                      generative models.
+                    </p>
+                    <p>
                       From 2019 to present, I am fortunate to get an opportunity
                       to work under the guidance of
                       <a href="https://research.ibm.com/people/masatoshi-ishii"
@@ -85,12 +91,6 @@
                         >Seoul National University</a
                       >) for on-chip training of IGZO TFT capacitor-based
                       synapse array.
-                    </p>
-                    <p>
-                      I worked as a software engineer in
-                      <a href="https://dentbird.com/">Imagoworks Inc.</a>
-                      in the compilation of quality data and fine-tuning of
-                      generative models.
                     </p>
                     <p style="text-align: center">
                       <a href="mailto:gabrielyoon@snu.ac.kr">Email</a>
@@ -161,7 +161,7 @@
                     <img
                       src="images/clinicValidity.png"
                       width="100"
-                      height="240"
+                      height="160"
                     />
                   </td>
                   <td width="75%" valign="middle">
@@ -196,8 +196,62 @@
                       deep learning-based cone-beam computed tomography (CBCT)
                       automatic landmarking algorithm by comparing three
                       dimensional CBCT head measurement values obtained by
-                      manual and automatic landmarking. This study is based on
-                      the product
+                      manual and automatic landmarking. This study further
+                      developed to the business solution
+                      <a
+                        href="https://dentbird.com/business/solutions/ct-landmark-detection/"
+                        >CT Landmark Detection</a
+                      >
+                    </p>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+
+            <table
+              style="
+                width: 100%;
+                border: 0px;
+                border-spacing: 0px;
+                border-collapse: separate;
+                margin-right: auto;
+                margin-left: auto;
+              "
+            >
+              <tbody>
+                <tr onmouseout="nlt_stop()" onmouseover="nlt_start()">
+                  <td style="padding: 20px; width: 25%; vertical-align: middle">
+                    <img src="images/SNN-TSP.png" width="100" height="100" />
+                  </td>
+                  <td width="75%" valign="middle">
+                    Solving Constraint Satisfaction Problem with Spiking Neural
+                    Network based on 1.4M 6T2R PCM Synaptic Array with 1.6K
+                    Stochastic LIF Neurons Neuromorphic Hardware
+                    <a href="data/KCS2021.pdf">
+                      <papertitle></papertitle>
+                    </a>
+                    <br />
+                    <strong>Seongwon Yoon</strong>,
+                    <a
+                      href="https://scholar.google.com/citations?hl=ko&user=wovcZXoAAAAJ"
+                      >Uicheol Shin</a
+                    >,
+                    <a
+                      href="https://scholar.google.com/citations?user=pkF_3SYAAAAJ&hl=ko&oi=ao"
+                      >Sangbum Kim</a
+                    ><br />
+                    <em
+                      >The 28th Korean Conference on Semiconductors
+                      (<strong>KCS</strong>)</em
+                    >, 2023.<br />
+
+                    <p>
+                      Aimed to evaluate the clinical validity and accuracy of a
+                      deep learning-based cone-beam computed tomography (CBCT)
+                      automatic landmarking algorithm by comparing three
+                      dimensional CBCT head measurement values obtained by
+                      manual and automatic landmarking. This study further
+                      developed to the business solution
                       <a
                         href="https://dentbird.com/business/solutions/ct-landmark-detection/"
                         >CT Landmark Detection</a
