--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                       >
                       (<a href="https://mse.snu.ac.kr/m11.php"
                         >Seoul National University</a
-                      >) as a student researcher for spiking neural network
-                      simulation software development to solve combinatorial
-                      optimization problems.
+                      >) as a student researcher for neuromorphic chip
+                      hardware-aware simulator development and solve
+                      combinatorial optimization problems.
                     </p>
                     <p>
                       From the summer of 2023, I am working under the guidance
@@ -224,11 +224,13 @@
                     <img src="images/SNN-TSP.png" width="100" height="100" />
                   </td>
                   <td width="75%" valign="middle">
-                    Solving Constraint Satisfaction Problem with Spiking Neural
-                    Network based on 1.4M 6T2R PCM Synaptic Array with 1.6K
-                    Stochastic LIF Neurons Neuromorphic Hardware
                     <a href="data/KCS2021.pdf">
-                      <papertitle></papertitle>
+                      <papertitle
+                        >Solving Constraint Satisfaction Problem with Spiking
+                        Neural Network based on 1.4M 6T2R PCM Synaptic Array
+                        with 1.6K Stochastic LIF Neurons Neuromorphic
+                        Hardware</papertitle
+                      >
                     </a>
                     <br />
                     <strong>Seongwon Yoon</strong>,
