feat: add pub description

--- a/index.html
+++ b/index.html
@@ -248,15 +248,11 @@
                     >, 2023.<br />
 
                     <p>
-                      Aimed to evaluate the clinical validity and accuracy of a
-                      deep learning-based cone-beam computed tomography (CBCT)
-                      automatic landmarking algorithm by comparing three
-                      dimensional CBCT head measurement values obtained by
-                      manual and automatic landmarking. This study further
-                      developed to the business solution
-                      <a
-                        href="https://dentbird.com/business/solutions/ct-landmark-detection/"
-                        >CT Landmark Detection</a
+                      Traveling Salesman Problem (TSP) solver based on the IBM
+                      neuromorphic chip (phase-change material GST based
+                      non-volatile memory synapse) hardware-aware simulator
+                      <a href="https://github.com/Gabriel-Yoon/SNN-TSP"
+                        >[code]</a
                       >
                     </p>
                   </td>
