fix: revise research interest

--- a/index.html
+++ b/index.html
@@ -138,8 +138,9 @@
                   >
                     <h2>Research</h2>
                     <p>
-                      I'm interested in adopting novel electronic materials in
-                      computing such as neuromorphic computing.
+                      I'm interested in adopting electronic materials
+                      (phase-change materials: GST, metal oxide: Indium Gallium
+                      Zinc Oxide, and etc) to computing.
                     </p>
                   </td>
                 </tr>
