--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                 </tr>
               </tbody>
             </table>
+
             <table
               style="
                 width: 100%;
@@ -146,6 +147,7 @@
                 </tr>
               </tbody>
             </table>
+
             <table
               style="
                 width: 100%;
@@ -281,6 +283,28 @@
                         >Jon Barron Website</a
                       >.
                     </p>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+
+            <table
+              style="
+                width: 100%;
+                border: 0px;
+                border-spacing: 0px;
+                border-collapse: separate;
+                margin-right: auto;
+                margin-left: auto;
+              "
+            >
+              <tbody>
+                <tr>
+                  <td
+                    style="padding: 20px; width: 100%; vertical-align: middle"
+                  >
+                    <h2>Ongoing Project</h2>
+                    <p></p>
                   </td>
                 </tr>
               </tbody>
