feat: Add IGZO proj

--- a/index.html
+++ b/index.html
@@ -275,13 +275,48 @@
             >
               <tbody>
                 <tr>
-                  <td style="padding: 0px">
+                  <td
+                    style="padding: 20px; width: 100%; vertical-align: middle"
+                  >
+                    <h2>Ongoing Project</h2>
+                    <p></p>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+
+            <table
+              style="
+                width: 100%;
+                border: 0px;
+                border-spacing: 0px;
+                border-collapse: separate;
+                margin-right: auto;
+                margin-left: auto;
+              "
+            >
+              <tbody>
+                <tr onmouseout="nlt_stop()" onmouseover="nlt_start()">
+                  <td style="padding: 20px; width: 25%; vertical-align: middle">
+                    <img src="images/IGZO_XOR.png" width="160" height="100" />
+                  </td>
+                  <td width="75%" valign="middle">
+                    On-Chip Training of Capacitor-Based Synaptic Device with
+                    IGZO TFT Capacitor Based Deep Neural Network.pdf
+                    <a href="data/AnyDA_2022.pdf">
+                      <papertitle></papertitle>
+                    </a>
                     <br />
-                    <p style="text-align: right; font-size: small">
-                      Design and source code from
-                      <a href="https://github.com/jonbarron/jonbarron_website"
-                        >Jon Barron Website</a
-                      >.
+                    <strong>Seongwon Yoon</strong>,
+                    <br />
+                    <em> (<strong></strong>)</em>, 2023.<br />
+
+                    <p>
+                      On-chip training with parallel update method using
+                      stochastic gradient descent to solve XOR problem
+                      <a href="https://github.com/Gabriel-Yoon/ICZO_XOR"
+                        >[code]</a
+                      >
                     </p>
                   </td>
                 </tr>
@@ -300,11 +335,14 @@
             >
               <tbody>
                 <tr>
-                  <td
-                    style="padding: 20px; width: 100%; vertical-align: middle"
-                  >
-                    <h2>Ongoing Project</h2>
-                    <p></p>
+                  <td style="padding: 0px">
+                    <br />
+                    <p style="text-align: right; font-size: small">
+                      Design and source code from
+                      <a href="https://github.com/jonbarron/jonbarron_website"
+                        >Jon Barron Website</a
+                      >.
+                    </p>
                   </td>
                 </tr>
               </tbody>
