fix: Fix pic size

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
               <tbody>
                 <tr onmouseout="nlt_stop()" onmouseover="nlt_start()">
                   <td style="padding: 20px; width: 25%; vertical-align: middle">
-                    <img src="images/IGZO_XOR.png" width="160" height="100" />
+                    <img src="images/IGZO_XOR.png" width="240" height="100" />
                   </td>
                   <td width="75%" valign="middle">
                     On-Chip Training of Capacitor-Based Synaptic Device with
@@ -307,7 +307,8 @@
                       <papertitle></papertitle>
                     </a>
                     <br />
-                    <strong>Seongwon Yoon</strong>,
+                    <strong>Seongwon Yoon</strong>, Jongwoon Won, Jaehyun Kang,
+                    Hyung-Min Lee, Sangbum Kim
                     <br />
                     <em> (<strong></strong>)</em>, 2023.<br />
 
