--- a/index.html
+++ b/index.html
@@ -161,6 +161,39 @@
               <tbody>
                 <tr onmouseout="nlt_stop()" onmouseover="nlt_start()">
                   <td style="padding: 20px; width: 25%; vertical-align: middle">
+                    <!-- <img src="images/IGZO_XOR.png" width="240" height="100" /> -->
+                  </td>
+                  <td width="75%" valign="middle">
+                    Solving Max-Cut Problem using Boltzmann Machine based on
+                    Phase Change Memory
+                    <a href="data/AnyDA_2022.pdf">
+                      <papertitle></papertitle>
+                    </a>
+                    <br />
+                    Yugyeong Kang, Jaewon Park, Masatoshi Ishii,
+                    <strong>Seongwon Yoon</strong>, Uicheol Shin, Suyeon Jang,
+                    Minki Kim, Sangbum Kim
+                    <br />
+                    <em> In Submission(<strong></strong>)</em>, 2023.<br />
+
+                    <p>Max-Cut problem solver using the simulator</p>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <table
+              style="
+                width: 100%;
+                border: 0px;
+                border-spacing: 0px;
+                border-collapse: separate;
+                margin-right: auto;
+                margin-left: auto;
+              "
+            >
+              <tbody>
+                <tr onmouseout="nlt_stop()" onmouseover="nlt_start()">
+                  <td style="padding: 20px; width: 25%; vertical-align: middle">
                     <img
                       src="images/clinicValidity.png"
                       width="100"
@@ -302,7 +335,7 @@
                   </td>
                   <td width="75%" valign="middle">
                     On-Chip Training of Capacitor-Based Synaptic Device with
-                    IGZO TFT Capacitor Based Deep Neural Network.pdf
+                    IGZO TFT Capacitor Based Deep Neural Network
                     <a href="data/AnyDA_2022.pdf">
                       <papertitle></papertitle>
                     </a>
