--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                     <p class="name" style="text-align: center">Seongwon Yoon</p>
                     <p>
                       I completed my degree from Seoul National University with
-                      B.S. in materials science in engineering.
+                      B.S. in materials science in engineering,
+                      <em>summa cum laude</em>, rank 4th in class 2022.
                     </p>
                     <p>
                       I worked as a software engineer in
