fix: Add more description

--- a/index.html
+++ b/index.html
@@ -177,7 +177,11 @@
                     <br />
                     <em> In Submission(<strong></strong>)</em>, 2023.<br />
 
-                    <p>Max-Cut problem solver using the simulator</p>
+                    <p>
+                      Max-Cut problem solver using the IBM neuromorphic chip
+                      (phase-change material GST based non-volatile memory
+                      synapse) hardware-aware simulator
+                    </p>
                   </td>
                 </tr>
               </tbody>
