fix: change CV to Resume

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
                     <p style="text-align: center">
                       <a href="mailto:gabrielyoon@snu.ac.kr">Email</a>
                       &nbsp;/&nbsp;
-                      <a href="data/CV_SeongwonYoon.pdf">CV</a> &nbsp;/&nbsp;
+                      <a href="data/CV_SeongwonYoon.pdf">Resume</a>
+                      &nbsp;/&nbsp;
                       <!-- <a href="data/JonBarron-bio.txt">Bio</a> &nbsp;/&nbsp; -->
                       <!-- <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Scholar</a> &nbsp;/&nbsp; -->
                       <!-- <a href="https://www.threads.net/@jonbarron">Threads</a> &nbsp;/&nbsp; -->
