fix: Add description for research interest

--- a/index.html
+++ b/index.html
@@ -141,9 +141,10 @@
                   >
                     <h2>Research</h2>
                     <p>
-                      I'm interested in adopting electronic materials
-                      (phase-change materials: GST, metal oxide: Indium Gallium
-                      Zinc Oxide, and etc) to computing.
+                      I'm interested in semiconductor physics as well as
+                      adopting electronic materials (phase-change materials:
+                      GST, metal oxide: Indium Gallium Zinc Oxide, and etc) to
+                      computing.
                     </p>
                   </td>
                 </tr>
