--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
                         >Seoul National University</a
                       >) as a student researcher for neuromorphic chip
                       hardware-aware simulator development and solve
-                      combinatorial optimization problems.
+                      combinatorial optimization problems under the IBM-SNU
+                      joint-student agreement.
                     </p>
                     <p>
                       From the summer of 2023, I am working under the guidance
