feat: Add deep learning startup description

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                       <em>summa cum laude</em>, rank 4th in class 2022.
                     </p>
                     <p>
-                      I worked as a software engineer in
+                      I worked as a software engineer in deep learning startup
                       <a href="https://dentbird.com/">Imagoworks Inc.</a>
                       in the compilation of quality data and fine-tuning of
                       generative models.
