fix: Grammatical error

--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
                       <em>summa cum laude</em>, rank 4th in class 2022.
                     </p>
                     <p>
-                      I worked as a software engineer in deep learning startup
-                      <a href="https://dentbird.com/">Imagoworks Inc.</a>
-                      in the compilation of quality data and fine-tuning of
-                      generative models.
+                      I worked as a software engineer at
+                      <a href="https://dentbird.com/">Imagoworks Inc.</a>, a
+                      deep learning startup, where I was involved in the
+                      compilation of quality data and fine-tuning of generative
+                      models.
                     </p>
                     <p>
                       From 2019 to present, I am fortunate to get an opportunity
