feat: Add KIST description

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                     <p>
                       I worked as a software engineer at
                       <a href="https://dentbird.com/">Imagoworks Inc.</a>, a
-                      deep learning startup, where I was involved in the
+                      <a href="https://eng.kist.re.kr/eng/index.do">KIST</a>
+                      spinoff deep learning company, where I was involved in the
                       compilation of quality data and fine-tuning of generative
                       models.
                     </p>
