fix: IGZO fix description

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                   </td>
                   <td width="75%" valign="middle">
                     On-Chip Training of Capacitor-Based Synaptic Device with
-                    IGZO TFT Capacitor Based Deep Neural Network
+                    IGZO TFT Deep Neural Network
                     <a href="data/AnyDA_2022.pdf">
                       <papertitle></papertitle>
                     </a>
@@ -356,8 +356,9 @@
                     <em> (<strong></strong>)</em>, 2023.<br />
 
                     <p>
-                      On-chip training with parallel update method using
-                      stochastic gradient descent to solve XOR problem
+                      On-chip training of 5x5 synapse array with parallel update
+                      method using conventional stochastic gradient descent and
+                      backpropagation to solve XOR problem.
                       <a href="https://github.com/Gabriel-Yoon/IGZO_XOR"
                         >[code]</a
                       >
