fix: KU EE link

--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
                       <a href="https://sites.google.com/site/kubasiclab/people"
                         >Prof. Hyung-Min Lee</a
                       >
-                      (<a
-                        href="https://pure.korea.ac.kr/en/persons/hyung-min-lee"
+                      (<a href="https://ee.korea.ac.kr/eng/main/main.html"
                         >Korea University</a
                       >) and
                       <a
