fix: Grammar mistake

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                       automatic landmarking algorithm by comparing three
                       dimensional CBCT head measurement values obtained by
                       manual and automatic landmarking. This study further
-                      developed to the business solution
+                      developed into the business solution
                       <a
                         href="https://dentbird.com/business/solutions/ct-landmark-detection/"
                         >CT Landmark Detection</a
