feat: Add device

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                       I'm interested in semiconductor physics as well as
                       adopting electronic materials (phase-change materials:
                       GST, metal oxide: Indium Gallium Zinc Oxide, and etc) to
-                      computing.
+                      computing device and algorithm.
                     </p>
                   </td>
                 </tr>
