--- a/index.html
+++ b/index.html
@@ -269,13 +269,11 @@
                     <img src="images/SNN-TSP.png" width="100" height="100" />
                   </td>
                   <td width="75%" valign="middle">
+                    Solving Constraint Satisfaction Problem with Spiking Neural
+                    Network based on 1.4M 6T2R PCM Synaptic Array with 1.6K
+                    Stochastic LIF Neurons Neuromorphic Hardware
                     <a href="data/KCS2021.pdf">
-                      <papertitle
-                        >Solving Constraint Satisfaction Problem with Spiking
-                        Neural Network based on 1.4M 6T2R PCM Synaptic Array
-                        with 1.6K Stochastic LIF Neurons Neuromorphic
-                        Hardware</papertitle
-                      >
+                      <papertitle></papertitle>
                     </a>
                     <br />
                     <strong>Seongwon Yoon</strong>,
