fix: Replace pic

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     </p>
                   </td>
                   <td style="padding: 2.5%; width: 30%; max-width: 40%">
-                    <a href="images/Seongwon_Yoon_head.jpg"
+                    <a href="images/IMG_9710.jpg"
                       ><img
                         style="
                           width: 100%;
