fix: rename pic

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                           border-radius: 50%;
                         "
                         alt="profile photo"
-                        src="images/me.png"
+                        src="images/ME.png"
                         class="hoverZoomLink"
                     /></a>
                   </td>
