fix: Research interest description

--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
                   >
                     <h2>Research</h2>
                     <p>
-                      I'm interested in semiconductor physics as well as
-                      adopting electronic materials (phase-change materials:
-                      GST, metal oxide: Indium Gallium Zinc Oxide, and etc) to
-                      computing device and algorithm.
+                      My research interest lies in semiconductor physics, along
+                      with the application of electronic materials, such as
+                      phase-change materials (GST) and metal oxides (Indium
+                      Gallium Zinc Oxide), in computing devices and algorithms.
                     </p>
                   </td>
                 </tr>
