feat: Add Gabriel

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
               <tbody>
                 <tr style="padding: 0px">
                   <td style="padding: 2.5%; width: 63%; vertical-align: middle">
-                    <p class="name" style="text-align: center">Seongwon Yoon</p>
+                    <p class="name" style="text-align: center">
+                      Seongwon (Gabriel) Yoon
+                    </p>
                     <p>
                       I completed my degree from Seoul National University with
                       B.S. in materials science in engineering,
