--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-    <title>Seongwon Yoon</title>
+    <title>Seongwon (Gabriel) Yoon</title>
 
-    <meta name="author" content="Seongwon Yoon" />
+    <meta name="author" content="Seongwon (Gabriel) Yoon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="shortcut icon"
