--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <p>
                       I completed my degree from Seoul National University with
                       B.S. in materials science in engineering,
-                      <em>summa cum laude</em>, rank 4th in class 2022.
+                      <em>summa cum laude</em>, ranked 4th in class of 2022.
                     </p>
                     <p>
                       I worked as a software engineer at
