--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                       >) as a student researcher for neuromorphic chip
                       hardware-aware simulator development and solve
                       combinatorial optimization problems under the IBM-SNU
-                      joint-student agreement.
+                      Joint-Study Agreement.
                     </p>
                     <p>
                       From the summer of 2023, I am working under the guidance
