fix: Change paper status

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                       href="https://scholar.google.com/citations?hl=ko&user=6zHzzuMAAAAJ"
                       >Uilyong Lee</a
                     ><br />
-                    <em>Submitted (<strong></strong>)</em>, 2023.<br />
+                    <em>In revision (<strong></strong>)</em>, 2023.<br />
 
                     <p>
                       Aimed to evaluate the clinical validity and accuracy of a
