feat: Add future career

--- a/index.html
+++ b/index.html
@@ -97,6 +97,14 @@
                       >) for on-chip training of IGZO TFT capacitor-based
                       synapse array.
                     </p>
+                    <p>
+                      From 2024 Fall, I will be joining Prof. Shimeng Yu's
+                      <a href="https://shimeng.ece.gatech.edu/"
+                        >Laboratory for Emerging Devices and Circuits</a
+                      >
+                      to study deep learning and probabilistic computing
+                      algorithm and hardware co-design.
+                    </p>
                     <p style="text-align: center">
                       <a href="mailto:gabrielyoon@snu.ac.kr">Email</a>
                       &nbsp;/&nbsp;
